--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["parcelsmart", "turbopack", "ucarecdn"]
+  "cSpell.words": ["Dropoff", "parcelsmart", "turbopack", "ucarecdn"]
 }
