--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-dom": "19.0.0-rc-02c0e824-20241028",
     "react-hook-form": "^7.53.1",
     "react-phone-number-input": "^3.4.9",
+    "react-select": "^5.8.2",
     "react-use": "^17.5.1",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
