--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-day-picker": "8.10.1",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "react-google-autocomplete": "^2.7.3",
     "react-hook-form": "^7.53.1",
     "react-phone-number-input": "^3.4.9",
     "react-select": "^5.8.2",
