--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-  "cSpell.words": ["Dropoff", "parcelsmart", "turbopack", "ucarecdn"]
+  "cSpell.words": [
+    "Dropoff",
+    "packagings",
+    "parcelsmart",
+    "turbopack",
+    "ucarecdn"
+  ]
 }
