--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,11 @@
 {
   "cSpell.words": [
     "Dropoff",
+    "HSCODE",
     "packagings",
     "parcelsmart",
+    "paystack",
+    "prevloading",
     "turbopack",
     "ucarecdn"
   ]
