--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-dom": "19.0.0-rc-02c0e824-20241028",
     "react-google-autocomplete": "^2.7.3",
     "react-hook-form": "^7.53.1",
+    "react-paystack": "^6.0.0",
     "react-phone-number-input": "^3.4.9",
     "react-select": "^5.8.2",
     "react-use": "^17.5.1",
@@ -51,6 +52,7 @@
     "zustand": "^5.0.1"
   },
   "devDependencies": {
+    "@types/googlemaps": "^3.43.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
