--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "embla-carousel-react": "^8.5.1",
     "input-otp": "^1.4.0",
     "lucide-react": "^0.454.0",
     "next": "15.0.2",
